@@ -89,7 +89,9 @@ Version 5.1.7
  - Improved documentation concerning autoincrement columns and the DataColumn class (bug #37350)
  - Fixed problem where executing a command that results in a fatal exception would not
    close the connection.  (bug #37991)
-
+ - Fixed problem where executing a command with a null connection object would result in
+   a null reference exception instead of an InvalidOp (bug #38276)
+   
 Version 5.1.6 
  - Fixed problem where parameters lists were not showing when you tried to alter a routine 
    in server explorer.  (bug #34359)
@@ -231,6 +233,8 @@ Version 5.0.10 -
     close the connection.  (bug #37991)
   - Fixed problem with byte and unsigned byte values writing more too many bytes when
     using prepared statements (bug #37968)      
+  - Fixed writing of single and double values to write out the proper number of digits
+    (bug #33322)
         
 Version 5.0.9 - 4/14/08
 
